ops/graph-node/kustomize/overlays/aws/goerli-nightly/resource_override.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ipfs
spec:
  template:
    spec:
      containers:
        - name: ipfs
          resources:
            requests:
              cpu: 1
              memory: 1.75Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-node
spec:
  template:
    spec:
      containers:
        - name: graph-node
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
